2013-04-11  Hirofumi Kosaka <kosaka@rworks.jp>

	* pandora_windows_service.cc: Fixed possible resource leaks;
	  - putenv() could run out the environment variable area, if
            using both file_collection and broker_agent.
	  - possible handle leak at launching tentacle_client.
	* Cleaned source code style.

	Merged from branch 4.x.

2013-04-04  Koichiro KIKUCHI <koichiro@rworks.jp>

	* windows_service.cc,
	  pandora_windows_service.cc,
	  windows_service.h: Set iteration base ticks after sleeping startup_delay
	 to exclude time taken by startup_delay from sleep time subtraction.

2013-04-03  Koichiro KIKUCHI <koichiro@rworks.jp>

	* windows_service.cc: Fixed typo of my previous commit.

2013-04-03  Koichiro KIKUCHI <koichiro@rworks.jp>

	* windows_service.cc: Adjust sleep time so that each iteration *starts"
	 with the same interval.

2013-03-12  Ramon Novoa  <rnovoa@artica.es>

	* bin/util/pandora_revent.exe: Added to repository. Compiled version of
	  pandora_revent.pl.

	* installer/pandora.mpi: Added pandora_revent.exe and curl.exe to the
	  installer.

2013-02-21  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.cc: Add the timestamp to the log.

2013-02-20  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.cc: Retrieve extra event information
	  for log modules.

2013-01-17  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc,
	  modules/pandora_module.h,
	  modules/pandora_module_factory.cc,
	  modules/pandora_module_regexp.cc: Added support for log modules.

2012-12-12  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.cc: Changed the flags of
	  LoadLibraryEx. Fixes a bug when loading event descriptions
	  from exe files.

2012-11-20  Sergio Martin <sergio.martin@artica.es>

	* pandora_windows_service.h
	  pandora_windows_service.cc: Added support for
	gis_exec (Automatic gis coordinates)

2012-11-20  Sergio Martin <sergio.martin@artica.es>
