@@ -1,3 +1,10 @@
+2013-04-11  Ramon Novoa  <rnovoa@artica.es>
+
+	* pandora_windows_service.cc,
+	  pandora_windows_service.h,
+	  udp_server/udp_server.cc: Added an option to force the sending of
+	  data files.
+
 2013-04-11  Hirofumi Kosaka <kosaka@rworks.jp>
 
 	* pandora_windows_service.cc: Fixed possible resource leaks;
